--- a/model/for_baseline.ipynb
+++ b/model/for_baseline.ipynb
@@ -486,6 +486,627 @@
     "np.save(\"../data/sz_taxi_202006/adj_mx.npy\", adj)\n",
     "np.save(\"../data/sz_taxi_202006/adj_sym.npy\", adj_sym)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(x):\n",
+    "    \"\"\" softmax function \"\"\"\n",
+    "    \n",
+    "    # assert(len(x.shape) > 1, \"dimension must be larger than 1\")\n",
+    "    # print(np.max(x, axis = 1, keepdims = True)) # axis = 1, 行\n",
+    "    \n",
+    "    x1 = x\n",
+    "    x1 -= np.max(x, axis = 1, keepdims = True) #为了稳定地计算softmax概率， 一般会减掉最大的那个元素\n",
+    "    x1 = np.exp(x1) / np.sum(np.exp(x1), axis = 1, keepdims = True)\n",
+    "    \n",
+    "    return x1\n",
+    "\n",
+    "cor_matrix=np.load(\"../../DL-Traff-Graph/SZTAXI/cor_matrix.npy\", allow_pickle=True)\n",
+    "OD_matrix=np.load(\"../../DL-Traff-Graph/SZTAXI/OD_matrix.npy\", allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OD_matrix=OD_matrix.astype(np.float32)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix.npy\", OD_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0000000e+00, 9.9820000e-14, 2.6959899e-08, ..., 8.9679931e-16,\n",
+       "        4.7473732e-09, 1.4684865e-13],\n",
+       "       [7.3267905e-13, 1.0000000e+00, 3.4932965e-16, ..., 3.8439717e-14,\n",
+       "        9.5188590e-10, 1.0778697e-12],\n",
+       "       [2.5284483e-09, 4.4634860e-18, 1.0000000e+00, ..., 1.7844089e-17,\n",
+       "        8.8797606e-12, 1.3772278e-14],\n",
+       "       ...,\n",
+       "       [7.9176808e-17, 4.6236686e-16, 1.6798144e-17, ..., 1.0000000e+00,\n",
+       "        1.3217296e-13, 1.2965006e-14],\n",
+       "       [2.5933127e-09, 7.0841909e-11, 5.1721006e-11, ..., 8.1778925e-13,\n",
+       "        1.0000000e+00, 8.0217944e-14],\n",
+       "       [2.0325202e-03, 2.0325202e-03, 2.0325202e-03, ..., 2.0325202e-03,\n",
+       "        2.0325202e-03, 1.0000000e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(cor_matrix)):\n",
+    "    cor_matrix[i, i]=0\n",
+    "\n",
+    "cor_matrix_sm=softmax(cor_matrix)\n",
+    "\n",
+    "for i in range(len(cor_matrix_sm)):\n",
+    "    cor_matrix_sm[i, i]=1\n",
+    "\n",
+    "cor_matrix_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.660e+02, 0.000e+00, 1.000e+00, ..., 2.700e+01, 5.570e+02,\n",
+       "        8.400e+01],\n",
+       "       [1.600e+01, 0.000e+00, 0.000e+00, ..., 0.000e+00, 1.400e+01,\n",
+       "        1.000e+00],\n",
+       "       [8.000e+00, 0.000e+00, 0.000e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        0.000e+00],\n",
+       "       ...,\n",
+       "       [2.800e+01, 0.000e+00, 0.000e+00, ..., 2.400e+01, 6.110e+02,\n",
+       "        1.010e+02],\n",
+       "       [5.100e+01, 0.000e+00, 0.000e+00, ..., 1.321e+03, 7.630e+02,\n",
+       "        8.600e+01],\n",
+       "       [2.000e+00, 0.000e+00, 0.000e+00, ..., 8.000e+00, 6.810e+02,\n",
+       "        1.000e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OD_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 0.0000000e+00],\n",
+       "       [1.8003888e-35, 2.0248763e-42, 2.0248763e-42, ..., 2.0248763e-42,\n",
+       "        2.4365609e-36, 5.5071030e-42],\n",
+       "       [8.3151400e-07, 2.7894190e-10, 2.7894190e-10, ..., 2.7894190e-10,\n",
+       "        2.7894190e-10, 2.7894190e-10],\n",
+       "       ...,\n",
+       "       [0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 0.0000000e+00],\n",
+       "       [0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 0.0000000e+00],\n",
+       "       [0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        1.0000000e+00, 0.0000000e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OD_matrix_sm=softmax(OD_matrix)\n",
+    "\n",
+    "OD_matrix_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/cor_matrix_sm.npy\", cor_matrix_sm)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix_sm.npy\", OD_matrix_sm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Person\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8064, 492)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(8064, 492)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_mat=pd.read_pickle(\"../../DL-Traff-Graph/SZTAXI/SZTAXI-flow.pkl\").values.astype(np.float32)\n",
+    "speed_mat=pd.read_pickle(\"../../DL-Traff-Graph/SZTAXI/SZTAXI-speed.pkl\").values.astype(np.float32)\n",
+    "\n",
+    "flow_mat.shape\n",
+    "speed_mat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[21.,  0.,  0., ...,  0., 11.,  6.],\n",
+       "       [18.,  0.,  0., ...,  5., 12.,  8.],\n",
+       "       [27.,  0.,  0., ..., 10., 11.,  8.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[41.235294, 42.      , 34.      , ..., 38.      , 38.909092,\n",
+       "        45.166668],\n",
+       "       [29.916666, 29.339838, 29.339838, ..., 36.5     , 38.083332,\n",
+       "        42.      ],\n",
+       "       [31.142857, 20.5     , 29.339838, ..., 31.666666, 41.454544,\n",
+       "        41.25    ],\n",
+       "       ...,\n",
+       "       [29.339838, 29.339838, 29.339838, ..., 29.339838, 29.339838,\n",
+       "        29.339838],\n",
+       "       [29.339838, 29.339838, 29.339838, ..., 29.339838, 29.339838,\n",
+       "        29.339838],\n",
+       "       [29.339838, 29.339838, 29.339838, ..., 29.339838, 29.339838,\n",
+       "        29.339838]], dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "speed_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cseadmin/dz/anaconda3/envs/torch1.7/lib/python3.7/site-packages/numpy/lib/function_base.py:2559: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[:, None]\n",
+      "/home/cseadmin/dz/anaconda3/envs/torch1.7/lib/python3.7/site-packages/numpy/lib/function_base.py:2560: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[None, :]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(492, 492)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_pearson=np.corrcoef(flow_mat.T, rowvar=True)\n",
+    "speed_pearson=np.corrcoef(speed_mat.T, rowvar=True)\n",
+    "\n",
+    "flow_pearson=np.nan_to_num(flow_pearson)\n",
+    "speed_pearson=np.nan_to_num(speed_pearson)\n",
+    "\n",
+    "flow_pearson.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/flow_pearson.npy\", flow_pearson)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/speed_pearson.npy\", speed_pearson)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Cov\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(492, 492)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[68.88634627,  1.86080194,  2.82013712, ...,  5.03896222,\n",
+       "        32.47346372, 33.14786318],\n",
+       "       [ 1.86080194,  1.74884091,  0.26197988, ...,  0.24180213,\n",
+       "         2.10523102,  2.13515167],\n",
+       "       [ 2.82013712,  0.26197988,  2.4011883 , ...,  0.19914075,\n",
+       "         2.16755162,  2.23961886],\n",
+       "       ...,\n",
+       "       [ 5.03896222,  0.24180213,  0.19914075, ..., 12.52190044,\n",
+       "         4.77664591,  4.5409753 ],\n",
+       "       [32.47346372,  2.10523102,  2.16755162, ...,  4.77664591,\n",
+       "        74.64525733, 67.44690999],\n",
+       "       [33.14786318,  2.13515167,  2.23961886, ...,  4.5409753 ,\n",
+       "        67.44690999, 70.82041939]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_cov=np.cov(flow_mat.T, rowvar=True)\n",
+    "speed_cov=np.cov(speed_mat.T, rowvar=True)\n",
+    "\n",
+    "flow_cov.shape\n",
+    "flow_cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/flow_cov.npy\", flow_cov)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/speed_cov.npy\", speed_cov)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Cosine\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cos_similar_matrix(v1, v2):\n",
+    "    num = np.dot(v1, np.array(v2).T)  # 向量点乘\n",
+    "    denom = np.linalg.norm(v1, axis=1).reshape(-1, 1) * np.linalg.norm(v2, axis=1)  # 求模长的乘积\n",
+    "    res = num / denom\n",
+    "    res[np.isneginf(res)] = 0\n",
+    "    return 0.5 + 0.5 * res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cseadmin/dz/anaconda3/envs/torch1.7/lib/python3.7/site-packages/ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(492, 492)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.63321173, 0.6621315 , ..., 0.8349408 , 0.9434126 ,\n",
+       "        0.9400189 ],\n",
+       "       [0.63321173, 1.        , 0.58899283, ..., 0.5925163 , 0.63988054,\n",
+       "        0.64256835],\n",
+       "       [0.6621315 , 0.58899283, 1.        , ..., 0.6014187 , 0.6528029 ,\n",
+       "        0.655298  ],\n",
+       "       ...,\n",
+       "       [0.8349408 , 0.5925163 , 0.6014187 , ..., 1.        , 0.82083976,\n",
+       "        0.8158041 ],\n",
+       "       [0.9434126 , 0.63988054, 0.6528029 , ..., 0.82083976, 1.        ,\n",
+       "        0.9901964 ],\n",
+       "       [0.9400189 , 0.64256835, 0.655298  , ..., 0.8158041 , 0.9901964 ,\n",
+       "        1.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.9999989 , 0.9784517 , 0.97766286, ..., 0.9891083 , 0.9898609 ,\n",
+       "        0.99092036],\n",
+       "       [0.9784517 , 0.9999896 , 0.966593  , ..., 0.9759396 , 0.97659755,\n",
+       "        0.9775419 ],\n",
+       "       [0.97766286, 0.966593  , 0.99999523, ..., 0.975599  , 0.97720474,\n",
+       "        0.97752976],\n",
+       "       ...,\n",
+       "       [0.9891083 , 0.9759396 , 0.975599  , ..., 1.0000013 , 0.9880032 ,\n",
+       "        0.98949635],\n",
+       "       [0.9898609 , 0.97659755, 0.97720474, ..., 0.9880032 , 1.0000007 ,\n",
+       "        0.9980149 ],\n",
+       "       [0.99092036, 0.9775419 , 0.97752976, ..., 0.98949635, 0.9980149 ,\n",
+       "        1.000001  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_cosine=get_cos_similar_matrix(flow_mat.T, flow_mat.T)\n",
+    "speed_cosine=get_cos_similar_matrix(speed_mat.T, speed_mat.T)\n",
+    "\n",
+    "flow_cosine=np.nan_to_num(flow_cosine)\n",
+    "speed_cosine=np.nan_to_num(speed_cosine)\n",
+    "\n",
+    "flow_cosine.shape\n",
+    "flow_cosine\n",
+    "speed_cosine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/flow_cosine.npy\", flow_cosine)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/speed_cosine.npy\", speed_cosine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature DTW\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[     0.        ,  54497.34051108,  57320.01793623, ...,\n",
+       "         35878.12430239,  66807.69944668,  71687.07831573],\n",
+       "       [ 52276.80829597,      0.        ,  49653.66195893, ...,\n",
+       "         57726.71536088,  91890.21368194,  97642.92257857],\n",
+       "       [ 58072.0928874 ,  50012.60881257,      0.        , ...,\n",
+       "         66273.06735754,  95592.54577875, 113863.69368029],\n",
+       "       ...,\n",
+       "       [ 36309.2448926 ,  60729.9672873 ,  64875.01386309, ...,\n",
+       "             0.        ,  71183.55299807,  76568.64624834],\n",
+       "       [ 64173.25999737,  94739.09312892,  99816.87948847, ...,\n",
+       "         71686.3544383 ,      0.        ,  28235.60124302],\n",
+       "       [ 73386.24558544,  99918.05470157, 115379.45998907, ...,\n",
+       "         77134.22741175,  28025.10507584,      0.        ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastdtw import fastdtw\n",
+    "\n",
+    "flow_DTW=np.zeros((492, 492))\n",
+    "speed_DTW=np.zeros((492, 492))\n",
+    "\n",
+    "for i in range(492):\n",
+    "    for j in range(492):\n",
+    "        flow_DTW[i, j]=fastdtw(flow_mat[:, i], flow_mat[:, j])[0]\n",
+    "        speed_DTW[i, j]=fastdtw(speed_mat[:, i], speed_mat[:, j])[0]\n",
+    "        \n",
+    "speed_DTW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(492):\n",
+    "    speed_DTW[i, i]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[    0. ,  5449.7,  5732. , ...,  3587.8,  6680.8,  7168.7],\n",
+       "       [ 5227.7,     0. ,  4965.4, ...,  5772.7,  9189. ,  9764.3],\n",
+       "       [ 5807.2,  5001.3,     0. , ...,  6627.3,  9559.3, 11386.4],\n",
+       "       ...,\n",
+       "       [ 3630.9,  6073. ,  6487.5, ...,     0. ,  7118.4,  7656.9],\n",
+       "       [ 6417.3,  9473.9,  9981.7, ...,  7168.6,     0. ,  2823.6],\n",
+       "       [ 7338.6,  9991.8, 11537.9, ...,  7713.4,  2802.5,     0. ]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "speed_DTW_new=speed_DTW\n",
+    "speed_DTW_new=np.round(speed_DTW_new)\n",
+    "speed_DTW_new/=10\n",
+    "\n",
+    "speed_DTW_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.save(\"../../DL-Traff-Graph/SZTAXI/flow_DTW.npy\", flow_DTW)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/speed_DTW.npy\", speed_DTW_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.16953463 0.21927572 ... 0.17156923 0.45285684 0.47458031]\n",
+      " [0.16953463 1.         0.1278438  ... 0.05167135 0.18425679 0.19185553]\n",
+      " [0.21927572 0.1278438  1.         ... 0.03631716 0.16190312 0.17174407]\n",
+      " ...\n",
+      " [0.17156923 0.05167135 0.03631716 ... 1.         0.15623805 0.15248768]\n",
+      " [0.45285684 0.18425679 0.16190312 ... 0.15623805 1.         0.92764477]\n",
+      " [0.47458031 0.19185553 0.17174407 ... 0.15248768 0.92764477 1.        ]]\n",
+      "---\n",
+      "[[1.         0.63321173 0.6621315  ... 0.8349408  0.9434126  0.9400189 ]\n",
+      " [0.63321173 1.         0.58899283 ... 0.5925163  0.63988054 0.64256835]\n",
+      " [0.6621315  0.58899283 1.         ... 0.6014187  0.6528029  0.655298  ]\n",
+      " ...\n",
+      " [0.8349408  0.5925163  0.6014187  ... 1.         0.82083976 0.8158041 ]\n",
+      " [0.9434126  0.63988054 0.6528029  ... 0.82083976 1.         0.9901964 ]\n",
+      " [0.9400189  0.64256835 0.655298   ... 0.8158041  0.9901964  1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.load(\"../../DL-Traff-Graph/SZTAXI/flow_pearson.npy\"))\n",
+    "print(\"---\")\n",
+    "print(np.load(\"../../DL-Traff-Graph/SZTAXI/flow_cosine.npy\"))"
+   ]
   }
  ],
  "metadata": {
