some forgetted changes

--- a/model/for_baseline.ipynb
+++ b/model/for_baseline.ipynb
@@ -234,7 +234,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in range(1, 21):\n",
+    "for k in range(2, 21):\n",
+    "    idx = np.argsort(cor_matrix, axis=1)[:,-k:]\n",
+    "    knn_adj=np.zeros((492, 492))\n",
+    "    for i in range(len(idx)):\n",
+    "        knn_adj[i][idx[i]]=1\n",
+    "    np.save(f\"../../DL-Traff-Graph/SZTAXI/adj_{k}.npy\", knn_adj, allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in range(21, 31):\n",
     "    idx = np.argsort(cor_matrix, axis=1)[:,-k:]\n",
     "    knn_adj=np.zeros((492, 492))\n",
     "    for i in range(len(idx)):\n",
@@ -640,6 +654,80 @@
    "source": [
     "np.save(\"../../DL-Traff-Graph/SZTAXI/cor_matrix_sm.npy\", cor_matrix_sm)\n",
     "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix_sm.npy\", OD_matrix_sm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 166.,    0.,    0., ...,   27.,  557.,   84.],\n",
+       "       [  16.,    0.,    0., ...,    0.,   14.,    0.],\n",
+       "       [   8.,    0.,    0., ...,    0.,    0.,    0.],\n",
+       "       ...,\n",
+       "       [  28.,    0.,    0., ...,   24.,  611.,  101.],\n",
+       "       [  51.,    0.,    0., ..., 1321.,  763.,   86.],\n",
+       "       [   0.,    0.,    0., ...,    8.,  681.,    0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OD_matrix=np.load(\"../../DL-Traff-Graph/SZTAXI/OD_matrix.npy\", allow_pickle=True)\n",
+    "\n",
+    "OD_matrix[OD_matrix<5]=0\n",
+    "OD_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix_5.npy\", OD_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 166.,    0.,    0., ...,   27.,  557.,   84.],\n",
+       "       [  16.,    0.,    0., ...,    0.,   14.,    0.],\n",
+       "       [   0.,    0.,    0., ...,    0.,    0.,    0.],\n",
+       "       ...,\n",
+       "       [  28.,    0.,    0., ...,   24.,  611.,  101.],\n",
+       "       [  51.,    0.,    0., ..., 1321.,  763.,   86.],\n",
+       "       [   0.,    0.,    0., ...,    0.,  681.,    0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OD_matrix[OD_matrix<10]=0\n",
+    "OD_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix_10.npy\", OD_matrix)"
    ]
   },
   {
