--- a/model/for_baseline.ipynb
+++ b/model/for_baseline.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -38,20 +38,22 @@
        "(492, 64)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embed_matrix=np.load(\"./saved/embedding_matrix.npy\")\n",
+    "w=10\n",
+    "\n",
+    "embed_matrix=np.load(f\"./saved/embedding_matrix_w{w}.npy\")\n",
     "\n",
     "embed_matrix.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +62,7 @@
        "(492, 492)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,28 +75,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[72.30105  , -0.386034 , 12.120458 , ..., -5.0983267, 10.383698 ,\n",
-       "         0.       ],\n",
-       "       [-0.386034 , 73.07714  , -8.034481 , ..., -3.3336499,  6.7834587,\n",
-       "         0.       ],\n",
-       "       [12.120458 , -8.034481 , 70.43657  , ..., -6.648742 ,  6.468872 ,\n",
-       "         0.       ],\n",
+       "array([[71.66062   , -2.0665975 ,  2.1600654 , ..., 10.845698  ,\n",
+       "        -9.043068  ,  0.        ],\n",
+       "       [-2.0665975 , 77.69006   ,  0.8297897 , ...,  3.1891987 ,\n",
+       "        -0.22237186,  0.        ],\n",
+       "       [ 2.1600654 ,  0.8297897 , 50.267864  , ...,  3.432667  ,\n",
+       "         2.192394  ,  0.        ],\n",
        "       ...,\n",
-       "       [-5.0983267, -3.3336499, -6.648742 , ..., 76.912605 ,  2.3218575,\n",
-       "         0.       ],\n",
-       "       [10.383698 ,  6.7834587,  6.468872 , ...,  2.3218575, 77.01283  ,\n",
-       "         0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       , ...,  0.       ,  0.       ,\n",
-       "         0.       ]], dtype=float32)"
+       "       [10.845698  ,  3.1891987 ,  3.432667  , ..., 55.023205  ,\n",
+       "        -3.8234985 ,  0.        ],\n",
+       "       [-9.043068  , -0.22237186,  2.192394  , ..., -3.8234985 ,\n",
+       "        73.89672   ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,40 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cseadmin/dz/anaconda3/envs/torch1.7/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.18448809,  0.00974219,  0.01123869, ...,  0.00293595,\n",
-       "         0.00094138,  0.        ],\n",
-       "       [ 0.01159629,  0.20665924,  0.04856317, ...,  0.02418181,\n",
-       "         0.01470489,  0.        ],\n",
-       "       [ 0.00733121,  0.02661366,  0.10077152, ...,  0.010441  ,\n",
-       "        -0.00537754,  0.        ],\n",
-       "       ...,\n",
-       "       [ 0.00251128,  0.01737695,  0.01369081, ...,  0.13979769,\n",
-       "         0.00495891,  0.        ],\n",
-       "       [ 0.00074642,  0.00979532, -0.00653646, ...,  0.00459683,\n",
-       "         0.12951389,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "         0.        ,  0.        ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sum_of_rows=cor_matrix.sum(axis=1)\n",
     "# cor_matrix/=sum_of_rows[:, np.newaxis]\n",
@@ -147,11 +118,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"../../DL-Traff-Graph/SZTAXI/cor_matrix.npy\", cor_matrix, allow_pickle=True)"
+    "np.save(f\"../../DL-Traff-Graph/SZTAXI/cor_matrix_w{w}.npy\", cor_matrix, allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(x):\n",
+    "    \"\"\" softmax function \"\"\"\n",
+    "    \n",
+    "    # assert(len(x.shape) > 1, \"dimension must be larger than 1\")\n",
+    "    # print(np.max(x, axis = 1, keepdims = True)) # axis = 1, 行\n",
+    "    \n",
+    "    x_cp = x.copy()\n",
+    "    x_cp -= np.max(x, axis = 1, keepdims = True) #为了稳定地计算softmax概率， 一般会减掉最大的那个元素\n",
+    "    x_cp = np.exp(x_cp) / np.sum(np.exp(x_cp), axis = 1, keepdims = True)\n",
+    "    \n",
+    "    return x_cp\n",
+    "\n",
+    "def relu(x):\n",
+    "    x[x<0]=0\n",
+    "    \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0000000e+00, 7.5541816e-32, 6.5507592e-31, ..., 3.8762768e-27,\n",
+       "        7.5541816e-32, 7.5541816e-32],\n",
+       "       [1.8181686e-34, 1.0000000e+00, 4.1687571e-34, ..., 4.4125196e-33,\n",
+       "        1.8181686e-34, 1.8181686e-34],\n",
+       "       [1.2795231e-21, 3.3831119e-22, 1.0000000e+00, ..., 4.5680641e-21,\n",
+       "        1.3215654e-21, 1.4755160e-22],\n",
+       "       ...,\n",
+       "       [6.5155808e-20, 3.0816031e-23, 3.9310990e-23, ..., 1.0000000e+00,\n",
+       "        1.2697721e-24, 1.2697721e-24],\n",
+       "       [8.0735002e-33, 8.0735002e-33, 7.2311093e-32, ..., 8.0735002e-33,\n",
+       "        1.0000000e+00, 8.0735002e-33],\n",
+       "       [2.0325202e-03, 2.0325202e-03, 2.0325202e-03, ..., 2.0325202e-03,\n",
+       "        2.0325202e-03, 2.0325202e-03]], dtype=float32)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cor_matrix_relu_sm=softmax(relu(cor_matrix))\n",
+    "\n",
+    "cor_matrix_relu_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(f\"../../DL-Traff-Graph/SZTAXI/cor_matrix_relu_sm_w{w}.npy\", cor_matrix_relu_sm, allow_pickle=True)"
    ]
   },
   {
@@ -572,12 +610,12 @@
     "for i in range(len(cor_matrix)):\n",
     "    cor_matrix[i, i]=0\n",
     "\n",
-    "cor_matrix_sm=softmax(cor_matrix)\n",
+    "cor_matrix_relu_sm=softmax(cor_matrix)\n",
     "\n",
-    "for i in range(len(cor_matrix_sm)):\n",
-    "    cor_matrix_sm[i, i]=1\n",
+    "for i in range(len(cor_matrix_relu_sm)):\n",
+    "    cor_matrix_relu_sm[i, i]=1\n",
     "\n",
-    "cor_matrix_sm"
+    "cor_matrix_relu_sm"
    ]
   },
   {
@@ -652,7 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"../../DL-Traff-Graph/SZTAXI/cor_matrix_sm.npy\", cor_matrix_sm)\n",
+    "np.save(\"../../DL-Traff-Graph/SZTAXI/cor_matrix_sm.npy\", cor_matrix_relu_sm)\n",
     "np.save(\"../../DL-Traff-Graph/SZTAXI/OD_matrix_sm.npy\", OD_matrix_sm)"
    ]
   },
